<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        >

        <EditText
            android:id="@+id/dateET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:focusable="false"
            android:hint="@string/date"/>

        <EditText
            android:id="@+id/daysET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:focusable="false"
            android:hint="@string/days"/>

        <Spinner
            android:id="@+id/projectNameSPN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:entries="@array/project_name_arrays"
            android:prompt="@string/choose_project"
            android:hint="@string/project_name"
            />

        <Spinner
            android:id="@+id/activitiesSPN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:entries="@array/activities_arrays"
            android:prompt="@string/choose_activities"
            android:hint="@string/activities"
            />

        <EditText
            android:id="@+id/detailActET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/detail_activities"/>

        <EditText
            android:id="@+id/sprintIdET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/sprint_bulk_id"/>

        <EditText
            android:id="@+id/durationET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/duration"
            android:inputType="numberDecimal"
            />

        <Spinner
            android:id="@+id/statusSPN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:entries="@array/status_arrays"
            android:prompt="@string/choose_status"
            android:hint="@string/activities"
            />

        <Button
            android:id="@+id/input_actBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/input_activities"
            android:layout_marginBottom="100dp"
            />

    </LinearLayout>


</ScrollView>