<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/detdog_dayTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/days"
                android:textSize="20sp"
                android:textColor="@color/fontColor"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="   "
                />
            <TextView
                android:id="@+id/detdog_dateTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/date"
                android:textSize="20sp"
                android:textColor="@color/fontColor"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/detdog_projectNameTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/project_name"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textColor="@color/fontColor"
            />

        <TextView
            android:id="@+id/detdog_activitiesTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/activities"
            android:textSize="20sp"
            android:textColor="@color/fontColor"
            />

        <EditText
            android:id="@+id/detdog_detailActET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/detail_activities"/>

        <EditText
            android:id="@+id/detdog_sprintIdET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/sprint_bulk_id"/>

        <EditText
            android:id="@+id/detdog_durationET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/duration"
            android:inputType="numberDecimal"
            />

        <Spinner
            android:id="@+id/detdog_statusSPN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:entries="@array/status_arrays"
            android:prompt="@string/choose_status"
            android:hint="@string/activities"
            />

    </LinearLayout>


</ScrollView>